# MemoryManager

./: CMakeLists.txt  MemoryDummy.h  README.md
.github/workflows/: build.yml
app/: MemoryDummy.h  main.cpp
files/include/: raw.h
files/src/: raw.cpp
